--- a/landing.css
+++ b/landing.css
@@ -7,7 +7,8 @@ body{
     background-position-x: initial;
     background-attachment: fixed;
     width: auto;
-    background-color: rgb(219, 218, 218);
+    background-color: rgb(113, 145, 145);
+    padding: 20px;
 }
  h2 {
  color:rgb(2, 0, 0); 
@@ -19,12 +20,17 @@ button{
 }
 .socialmedia{
     display: flex;
-    background-color: rgb(78, 77, 77);
+    background-color: rgb(106, 106, 243);
     flex-direction: row;
     width: 450px;
     margin: 20px;
     color: black
    
+}
+
+h1{
+  margin: 20px;
+  margin-top: 200px;
 }
 .socialmedia>i{
     border: 1px solid;
@@ -34,10 +40,11 @@ button{
 }
 
 header>h1 {
-margin: 20px;
+margin: 20px; 
 color: black;
 font-weight: 700;
 text-align: center;
+margin-top: 100px;
 }
 div>i{
     margin: 30px;
@@ -113,11 +120,10 @@ section{
     font-size: 25px;
     padding: 5px 5px; 
     color:white;
-     width: 300px; 
+    width: 300px; 
     text-align: center;
     margin-top: 80px;    
   }
-  .main>a{
-      height: 200px;
-  }
+ 
 
+  
