--- a/pages/contact.css
+++ b/pages/contact.css
@@ -1,3 +1,8 @@
+ body{
+   background-color: rgb(113, 145, 145)
+ }
+ 
+ 
  header{
     text-align: center;
  } 
@@ -31,7 +36,7 @@
    h1{ align-content: center;
     justify-content: center;
     background-size: contain;
-    background-color: black;
+    background-color: rgb(80, 78, 78);
     color:white;
     font-size: 35px;
     padding:20px;
@@ -129,4 +134,4 @@
       
       }
 
-   }
+   
