--- a/pages/gallery.css
+++ b/pages/gallery.css
@@ -1,5 +1,7 @@
 
-
+body{
+  background-color: rgb(113, 145, 145)
+}
  
 
  
@@ -71,12 +73,7 @@
    .navbar-toggleable-md .navbar-collapse {         
     -webkit-justify-content: flex-end;
     justify-content: flex-end;  
-} 
-.nav-link{
-    border: 1px solid;
-    border-radius: 15px;
-    padding: 10px;
-    margin: 10px;
+
 }
 
   
