--- a/pages/contact.css
+++ b/pages/contact.css
@@ -6,41 +6,15 @@
  header{
     text-align: center;
  } 
-
-.navigation{
-   margin: auto;
-   height: 80px;
-   padding: 30px;
-   font-family: Arial, Helvetica, sans-serif;
-   font-weight: bold;
-   
-   }
-   nav{
-   display: flex;
-   flex-direction: row;
-   padding: 10px;
-   justify-content: center;
-   font-family: Arial, Helvetica, sans-serif;
-   font-size: 14px;
-   font-weight: bold;
-   line-height: 1;
-   }
-   a{
-      margin: 20px ;
-      text-decoration: none;
-      font-family: Arial, Helvetica, sans-serif;
-      color: black;
-      font-family: Arial, Helvetica, sans-serif;
-      font-weight: normal;
-   }
    h1{ align-content: center;
     justify-content: center;
     background-size: contain;
-    background-color: rgb(80, 78, 78);
-    color:white;
+    color:white; 
     font-size: 35px;
     padding:20px;
     font-family: Arial, Helvetica, sans-serif;
+    margin-top: 200px;
+    text-align: center;
     
     
 
@@ -93,45 +67,16 @@
       padding: 20px;
    }
    @media(max-width:756px){
-      nav{
-         display: flex;
-         float: left;
-         margin: auto;
-         height: 200px;
-     }
-     a{
-         display: block;
+      
+   form {
+         width: auto;
+         padding: 30px;
+         margin-left: 50px;
+         justify-content: center;
          
-     }
-     ul{
-         float:left;
-         margin-left: none;
-         margin-left: -300px;
-     }
-      .icon{
-            display: flex;
-            flex-direction: column;
-            border: none;
-            padding: 5px;
-            background-color: none;
-           
-        }         
-      i{
-         border: none;
-        }
-      footer{
-         margin-bottom: 5px;
-         font-size: smaller;
-         margin-right: 0;
-       
-      }  
-      input{
-         width: 100px;
-         border: 1px solid;
-         margin-left: 20px;
+   }
+   }
       
-      }
       
-      }
 
    
