commit my changes

--- a/pages/landing.css
+++ b/pages/landing.css
@@ -57,7 +57,8 @@ p{
 .image{
      text-align:center; 
      width: auto;
-     margin-bottom: 150px; 
+     margin-bottom: 150px;
+     padding: 80px; 
 
    
 }
