commit my changes

--- a/pages/gallery.css
+++ b/pages/gallery.css
@@ -1,81 +1,75 @@
 
 body{
-  background-color: rgb(113, 145, 145)
+  background-color: rgb(224, 222, 223);
+}
+
+section{
+  height: 650px;
+  width: 1200px;
+  margin-left: 80px;
+  overflow: hidden; 
+  
+}
+
+.main{
+  display: grid;
+  grid-template-columns: 300px 600px;
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  transition: all 0.5s ease;
+  background-image: url(./black\ themes.jpg);
+}
+.main:hover{
+  transform: scale(1.1); 
+ 
+}
+.container{
+  display: grid;
+  grid-template-columns: 300px 300px 300px ; 
+  width: auto;
+  padding: 30px;
+  margin-top: 20px;
+  height: auto;
+  background-attachment: fixed;
+}
+  
+  
+
+.top{
+  padding: 30px;
+  margin-top: 20px;
+  background-color: rgb(102, 102, 126);
+  height: 800px;
+  background-attachment: fixed;
+ margin-left: 10px;
+  
+
 }
  
-
- 
- ul{
-    list-style: none;
-    display:grid;
-    grid-template-columns: 100px 100px 100px 100px 100px;
-     
- }
- li{
-     display: flex; 
-     align-content: center;
-     height: 100px;
-   
-   
- }
-  
- section{
-     opacity: 1;
-     display: grid;
-     grid-template-columns: 300px 300px 300px;
-     padding: 10px;
-     transition: .5s ease;
-     backface-visibility: hidden;
-     margin: 10px;
-     margin-left: 400px;
-    
- 
-   }
-   .container{
-     display: flex;
-     margin: 30px;  
-   }
-   section div img {
-       margin: 20px;
-       padding: 20px;
-      
-   }
-   .middle {
-     opacity: 0;
-     position: relative;
-     text-align: center; 
-     background-color:rgb(60, 60, 114);
-     border-radius: 25px;
-     margin-left: -310px;
-     height: 250px;
-     margin-top: -30px;
-    
-   }
-   .container:hover .image {
-     opacity: 0.5;
-   }
-   
-   .container:hover .middle {
-     opacity: 3;
-   }
-    
-    .text {
-     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-     font-size: 25px;
-     padding: 5px 5px; 
-     color:white;
-     width: 300px; 
-     text-align: center;
-     margin-top: 80px; 
-     
-      
-   }
    .navbar-toggleable-md .navbar-collapse {         
     -webkit-justify-content: flex-end;
     justify-content: flex-end;  
 
 }
-
+ h4,h5{
+   padding: 10px;
+   margin-left: 18px;
+ }
+ i{
+   padding: 20px;
+   
+ 
   
-    
+ }
+  .icon{
+    display: flex;
+   flex-direction: column;
+  }  
+ .text{
+   font-size: 20px;
+   color: rgb(231, 225, 225);
+ }
+
  
