--- a/pages/contact.css
+++ b/pages/contact.css
@@ -60,21 +60,34 @@
       border: 2px solid;
       font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
       text-transform: uppercase;
+      width: 600px;
+      height: 50px;
    }
    input[type=submit]{
       background-color: black;
       color:white;
       padding: 20px;
+
    }
+
    @media(max-width:756px){
       
    form {
          width: auto;
          padding: 30px;
-         margin-left: 50px;
+         margin-left: 10px;
          justify-content: center;
-         
+      
    }
+   input{
+      width: 300px;
+      
+    
+   }
+   input.message{
+      height: 200px;
+   }
+   
    }
       
       
