--- a/landing.css
+++ b/landing.css
@@ -156,4 +156,8 @@ section{
       padding: 10px;
       text-align: center;
     }
+    body:hover{
+      transition: none;
+      transform: none;
+    }
   }
